--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,3 +12,53 @@
 .icon-block .material-icons {
 	font-size: inherit;
 }
+
+.home {
+  margin: auto;
+}
+.home-header {
+  margin-top: 13px;
+  width: 100%;
+}
+.home-footer {
+  padding-top: 60px;
+}
+.yellow-color {
+  background-color: #ffcc33;
+}
+.my-image {
+  max-width: 100%;
+  max-height: 100%;
+}
+.provider-text {
+  margin: auto;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-bottom: 90px;
+  color: white;
+  font-size: 16px;
+}
+.requestor-text {
+  margin: auto;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-bottom: 90px;
+  color: #ff9900;
+  font-size: 16px;
+}
+
+@media (min-width: 768px) {
+    .container{
+        width:600px;
+    }
+}
+@media (min-width: 992px) {
+    .container{
+        width:720px;
+    }
+}
+@media (min-width: 1200px) {
+    .container {
+        width:960px;
+    }
+}
